Revert incorrect commit files
