# src/CSharp/EasyMicroservices.IdentityMicroservice.Clients/Connected Services/IdentityGeneratedServices/OpenAPI.nswag.json
@@ -428,17 +428,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/MessageContract"
+                  "$ref": "#/components/schemas/ValidateResetPasswordTokenResponseContractMessageContract"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/MessageContract"
+                  "$ref": "#/components/schemas/ValidateResetPasswordTokenResponseContractMessageContract"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/MessageContract"
+                  "$ref": "#/components/schemas/ValidateResetPasswordTokenResponseContractMessageContract"
                 }
               }
             }
@@ -940,6 +940,35 @@
           "token": {
             "type": "string",
             "nullable": true
+          }
+        }
+      },
+      "ValidateResetPasswordTokenResponseContract": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "userName": {
+            "type": "string",
+            "nullable": true
+          }
+        }
+      },
+      "ValidateResetPasswordTokenResponseContractMessageContract": {
+        "title": "MessageContract<ValidateResetPasswordTokenResponseContract>",
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "isSuccess": {
+            "type": "boolean"
+          },
+          "error": {
+            "$ref": "#/components/schemas/ErrorContract"
+          },
+          "success": {
+            "$ref": "#/components/schemas/SuccessContract"
+          },
+          "result": {
+            "$ref": "#/components/schemas/ValidateResetPasswordTokenResponseContract"
           }
         }
       },
